The backend part of the project has been mostly completed, except for a few minor details.